<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@android:color/holo_blue_dark"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number_system"
        android:textAppearance="?android:textAppearanceLarge"
        android:textSize="24sp"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_marginTop="36dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/converter"
        android:textAppearance="?android:textAppearanceLarge"
        android:textSize="24sp"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ask_input"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/gray"
        android:textSize="18dp"
        android:layout_marginTop="36dp"
        android:paddingLeft="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <EditText
            android:id="@+id/number_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:maxLines="1"
            android:textColor="@android:color/white"
            android:drawableBottom="@color/gray" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/number_system"
            android:textAlignment="center"/>

    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/submit"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:background="@drawable/ripple_bg"
        android:padding="8dp"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textAppearance="?android:textAppearanceLarge"
            android:textSize="20sp"
            android:textColor="@color/green"
            android:text="@string/binary"
            android:paddingLeft="16dp"
            android:gravity="right"
            android:paddingRight="16dp"/>

        <TextView
            android:id="@+id/binary_display"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textAppearance="?android:textAppearanceLarge"
            android:textSize="20sp"
            android:textColor="@color/red"
            tools:text="10011011"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textAppearance="?android:textAppearanceLarge"
            android:textSize="20sp"
            android:textColor="@color/green"
            android:text="@string/twos_complement"
            android:paddingLeft="16dp"
            android:gravity="right"
            android:paddingRight="16dp"/>

        <TextView
            android:id="@+id/twos_complement_display"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textAppearance="?android:textAppearanceLarge"
            android:textSize="20sp"
            android:textColor="@color/red"
            tools:text="10011011"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textAppearance="?android:textAppearanceLarge"
            android:textSize="20sp"
            android:textColor="@color/green"
            android:text="@string/hexadecimal"
            android:paddingLeft="16dp"
            android:gravity="right"
            android:paddingRight="16dp"/>

        <TextView
            android:id="@+id/hexadecimal_display"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textAppearance="?android:textAppearanceLarge"
            android:textSize="20sp"
            android:textColor="@color/red"
            tools:text="10011011"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textAppearance="?android:textAppearanceLarge"
            android:textSize="20sp"
            android:textColor="@color/green"
            android:text="@string/decimal"
            android:paddingLeft="16dp"
            android:gravity="right"
            android:paddingRight="16dp"
            android:maxLines="1"/>

        <TextView
            android:id="@+id/decimal_display"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textAppearance="?android:textAppearanceLarge"
            android:textSize="20sp"
            android:textColor="@color/red"
            tools:text="10011011"/>
    </LinearLayout>

</LinearLayout>